--- a/oec/assets/scss/elements/_visualize.scss
+++ b/oec/assets/scss/elements/_visualize.scss
@@ -94,7 +94,7 @@ body.visualize {
     font-size: 12px;
     left: 20px;
     opacity: 0.7;
-    position: absolute;
+    position: fixed;
     top: $header - 8;
     z-index: 21;
 
@@ -108,7 +108,7 @@ body.visualize {
       opacity: 1;
     }
 
-    @media all and (max-width: 768px) {
+    @media all and (max-width: 950px) {
       left: 15px;
       top: $header - 20;
     }
